# to-do-with-django

./: README.md  db.sqlite3  pyproject.toml
config/: settings.py  urls.py
toDo/: apps.py  forms.py  models.py  urls.py  views.py
toDo/migrations/: 0001_initial.py
toDo/templates/toDo/: add_todo.html  edit_todo.html  todo_list.html
